# blog

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  _config.yml  config.yaml  dev-style.sh  index.js  package-lock.json  package.json  rustfmt.toml  tsconfig.json
content/: 20180405-type-safe-printf-in-idris.md  20190908-higher-kinded-types-in-typescript.md  20200620-library-at-the-end-of-space-and-time.md  20200723-frost-flower.md  20200815-twelve-light-minutes.md  20210407-edge-case.md  20210410-beast-and-human.md  20210716-full-notes-of-installing-arch-in-2021.md  20211010-extinguished.md  20211030-a-letter-to-a-stranger.md  20211101-suiciding-ghost.md  20211225-twenty-twenty-one.md  20220120-oracle.md  20220316-singularity.md  20220405-gravestone.md  20220507-sunken-in-wind.md  20220728-introducing-google-fonts-plus.md  20230102-twenty-twenty-two.md  _index.md  about.md  links.md
content/20180215-use-lxrunoffline-to-install-arch-linux/: index.md
content/20180725-run-vscode-on-archlinux-on-wsl/: index.md
content/20221005-donglingshan/: index.md
content/blog/: _index.md  a-graceful-way-to-generate-a-pascals-trangle-in-haskell.md  blog-migration-log.md  conlang-draft.md  git-cheatsheet.md  (+11 more)
layouts/: 404.html  index.html
lib/: post.typ
scaffolds/: draft.md  page.md  post.md
scripts/: deploy.sh  dictInsight.js  gloss-tool.js  massgen.sh  schemagen.mjs  schemas.ts  tag_katex.js  types.d.ts  update.sh  wordgen.js
source/: 404.html
src/: cache.rs  compilation.rs  compiler.rs  config.rs  dev_server.rs  fonts.rs  lib.rs  main.rs  metadata.rs
(+267 files in other folders)
